modified techverse page; fixed hambuger alignment for mobile devices

--- a/testPages/tv.css
+++ b/testPages/tv.css
@@ -217,7 +217,7 @@ svg:hover
     .fa-bars
     {
         display:block;
-        margin-right: 20px;
+        margin-right: 10px;
         font-size: 20px;
         padding: 10px;
         border-radius: 5px;
